added dynamic labels to waypoints
dynamic labels and new icons and new options added